# mlops-fastapi

./: main.py
mlops/: .gitignore  Dockerfile  README.md  pyproject.toml  train_model.py
mlops/app/: main.py  models.py  services.py
mlops/app/data/: alura_real_estate.csv
